@@ -1,7 +1,18 @@
 <table border=0>
 <tr>
-<td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
+<td colspan=4 bgcolor=lightblue><b>2006-11-22</b>
 <tr bgcolor=lightgrey>
+<td>00:53
+<td>osborn
+<td>
+lib/asqtad_invert_p.c
+1.10<br>
+<td>Workaround for XLC bug in multimass inverter.
+</tr>
+
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
+<tr>
 <td>23:54
 <td>osborn
 <td>
@@ -33,7 +44,7 @@ lib/invert_cg_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:32
 <td>osborn
 <td>
@@ -42,7 +53,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:26
 <td>osborn
 <td>
@@ -79,7 +90,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:52
 <td>osborn
 <td>
@@ -111,7 +122,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:02
 <td>osborn
 <td>
@@ -140,7 +151,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:23
 <td>osborn
 <td>
@@ -149,7 +160,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:16
 <td>osborn
 <td>
@@ -158,7 +169,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:12
 <td>osborn
 <td>
@@ -173,7 +184,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:09
 <td>osborn
 <td>
@@ -204,7 +215,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>13:32
 <td>osborn
 <td>
@@ -256,7 +267,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:12
 <td>osborn
 <td>
@@ -265,7 +276,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:09
 <td>osborn
 <td>
@@ -286,7 +297,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:01
 <td>osborn
 <td>
@@ -307,7 +318,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:21
 <td>osborn
 <td>
@@ -324,7 +335,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:44
 <td>osborn
 <td>
@@ -337,7 +348,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:32
 <td>osborn
 <td>
@@ -348,7 +359,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:51
 <td>osborn
 <td>
@@ -357,7 +368,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:48
 <td>osborn
 <td>
@@ -374,7 +385,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:54
 <td>osborn
 <td>
@@ -439,7 +450,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:05
 <td>osborn
 <td>
@@ -452,7 +463,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:23
 <td>osborn
 <td>
@@ -463,7 +474,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:21
 <td>osborn
 <td>
@@ -503,7 +514,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:12
 <td>osborn
 <td>
@@ -512,7 +523,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:55
 <td>osborn
 <td>
@@ -557,7 +568,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:50
 <td>osborn
 <td>
@@ -588,7 +599,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:17
 <td>osborn
 <td>
@@ -627,7 +638,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:47
 <td>osborn
 <td>
@@ -638,7 +649,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:23
 <td>osborn
 <td>
@@ -659,7 +670,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>06:16
 <td>osborn
 <td>
@@ -670,7 +681,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:41
 <td>osborn
 <td>
@@ -707,7 +718,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:03
 <td>osborn
 <td>
@@ -730,7 +741,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>02:02
 <td>osborn
 <td>
@@ -741,7 +752,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:51
 <td>osborn
 <td>
@@ -758,7 +769,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:26
 <td>osborn
 <td>
@@ -769,7 +780,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:58
 <td>osborn
 <td>
@@ -778,7 +789,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:52
 <td>osborn
 <td>
@@ -793,7 +804,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:24
 <td>osborn
 <td>
@@ -804,7 +815,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:34
 <td>osborn
 <td>
@@ -813,7 +824,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:36
 <td>osborn
 <td>
@@ -828,7 +839,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:26
 <td>osborn
 <td>
